Impl CreateUser
